[package]
name = "chimera_utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["core_manager", "serde"]

core_manager = ["dep:camino"]
serde = ["dep:serde"]
specta = ["dep:specta"]

[dependencies]
tokio = { workspace = true }
camino = { version = "1.1", features = ["serde1"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
constcat = "0.6.0"
specta = { version = "^2.0.0-rc.22", optional = true, features = ["derive"] }
